# Snake

./: .gitignore  CMakeLists.txt  Makefile  README.md
assets/shaders/: quad.frag  quad.vert
assets/textures/: Texture_Atlas.aseprite
src/: CMakeLists.txt  assets.h  audio.cpp  audio.h  config.h  display.cpp  display.h  game.cpp  game.h  gl.cpp  gl.h  inputs.cpp  inputs.h  main.cpp  pch.h  renderer.cpp  renderer.h  shared_header.h  utils.cpp  utils.h
